# Football-Data-Engineering-Pipeline

./: .dockerignore  .gitignore  README.md  USER_MANUAL.md  makefile
.github/workflows/: cd-app.yml  cd-infra.yml  ci-checks.yml
Docs/: DWH_design.md  architecture.md  cicd.md  cloud_deployment.md  infrastructure.md  setup.md
analytics/: .dockerignore  .user.yml  Dockerfile  dbt_project.yml  profiles.yml  requirements.txt
analytics/analyses/: home_advantage_calculator.sql  top_team_by_goals.sql
analytics/macros/: incremental_filter.sql
analytics/snapshots/: players_snapshot.sql
analytics/tests/: assert_scores_positive.sql
infrastructure/aws/: ecs.tf  github_oidc.tf  iam.tf  networking.tf  outputs.tf  providers.tf  s3_ecr.tf  scheduler.tf  terraform.tfvars  variables.tf  workflow.tf
infrastructure/snowflake/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
ingestion/: Dockerfile  ingestion.py  main.py  pyproject.toml  requirements.txt
ingestion/ingestion/: main.py
ingestion/ingestion/connectors/: football_api.py  minio_storage.py
ingestion/ingestion/entities/: fixtures.py  players.py  standings.py
ingestion/ingestion/utils/: config.py
ingestion/src/: .dockerignore
ingestion/src/connectors/: football_api.py  minio_storage.py
ingestion/src/entities/: fixtures.py  players.py  standings.py
ingestion/src/utils/: config.py
local_Ops/: Dockerfile  dagster.yaml  docker-compose.yaml  requirements.txt
orchestration/: workspace.yaml
scripts/: build_and_push.sh  deploy_infra.sh  deploy_smart_infra.sh
(+17 files in other folders)
